C: Skip existing address values on parameter copy