@@ -7,8 +7,15 @@
 	<c:url var="url" value="/user/process.do">
 		<c:param name="method" value="processStatusEdit"/>
 		<c:param name="id" value="${wizardData.process.id}"/>
-		<c:param name="returnUrl" value="${reopenProcessUrl}"/>
-		<c:param name="returnChildUiid" value="${uiid}"/>
+		<c:choose>
+			<c:when test="${stepData.step.okClose}">
+				<c:param name="closeScript" value="${param.closeScript}"/>
+			</c:when>
+			<c:otherwise>
+				<c:param name="returnUrl" value="${reopenProcessUrl}"/>
+				<c:param name="returnChildUiid" value="${uiid}"/>
+			</c:otherwise>
+		</c:choose>
 	</c:url>
 	<c:import url="${url}"/>
 </div>
